[tool.poetry]
name = "routesearching"
version = "0.1.0"
description = ""
authors = ["Dzalapino <jpodkomorka19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
networkx = "^3.2"
matplotlib = "^3.8.0"
memory-profiler = "^0.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
